@@ -233,3 +233,6 @@ issue 244: uv were flipped upside down for y-direction; fixed on 14.12.2020 by u
 issue 245: world list was not displaying worlds correctly; fixed on 20.12.2020 by uuk
 issue 246: world gen config screen was not using name; fixed on 20.12.2020 by uuk
 issue 248: logger was escaping mod paths when no log escape is set; fixed on 14.01.2021 by uuk
+issue 249: small errors all over the place
+issue 250: fixed major rendering issues: shared vertex list lead into vertex de-allocation errors, and
+           unwanted vertex deletions in BlockFaceState due to a wrong copy command; fixed on 18.01.2021 by uuk
