@@ -1465,4 +1465,5 @@ R   [uuk]: improved world serialization API
 [uuk]: the three build-in item properties are now stored in save files
 [uuk]: nether portal will now use a tag to decide for supporting blocks
 [uuk]: item tooltips will render block tags if block tag exists [duplicated tags are removed]
+[uuk]: fixed issue 250: rendering of blocks was broken
 
